cmake_minimum_required(VERSION 3.21)
project(CF_L2_C C)

set(CMAKE_C_STANDARD 11)

add_executable(ex2 Exercice2/main.c)
add_executable(ex1 Exercice1/main.c)
add_executable(ex8 Exercice8/main.c)
add_executable(ex9 Exercice9/main.c)
add_executable(ex10 Exercice10/main.c)
add_executable(ex11 Exercice11/main.c)